--- a/sass/style.scss
+++ b/sass/style.scss
@@ -198,7 +198,7 @@
         .car2 {
           width: 602px;
           height: 1003px;
-          background-image: url(./images/IMAGE1.jpg);
+          background-image: url(/images/IMAGE1.jpg);
           background-repeat: no-repeat;
           background-position: center;
           margin-left: 400px;
