--- a/sass/style.css
+++ b/sass/style.css
@@ -199,7 +199,7 @@
 .container .wrapper1 .wrap1 .card2 .car2 {
   width: 602px;
   height: 1003px;
-  background-image: url(./images/IMAGE1.jpg);
+  background-image: url(/images/IMAGE1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   margin-left: 400px;
